QtQml: Fix and test edge cases of QQmlFile's local file detection

URLs with two slashes after the colon are generally _not_ local as they
contain an authority. However, file URLs with two slashes are
interpreted as "special" paths by QUrl::toLocalFile(). Therefore, we
accept them.

URLs without slashes after the colon can be local files. They denote
relative paths or special android resources then.

Fixes: QTBUG-102944
Change-Id: Iaab3d7501b631e88ee8c1d93f1de8149ba60a5c4
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit f5514e682b2c97d3dea0369ff7cb56e3376b3cde)
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>