tests/auto/qml/qqmlapplicationengine/androidassets/qml/pages/MainPage.qml
@@ -1,0 +1,11 @@
+import QtQuick
+
+Rectangle {
+  anchors.fill: parent
+  color: "#ddd"
+
+  Text {
+    anchors.centerIn: parent
+    text: "Qt 6"
+  }
+}
